# blog-axum-api

./: .env  .gitignore  Assignment.md  Cargo.toml  README.md
src/: app.rs  config.rs  error.rs  handlers.rs  main.rs  models.rs  router.rs  services.rs
src/author/: author_route.rs  mod.rs  models.rs
src/post/: handlers.rs  mod.rs  models.rs  service.rs
