[package]
name = "blog-axum-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
serde = "1.0.228"
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "migrate",
    "uuid",
    "chrono",
    "json",
] }
secrecy = "0.10.3"
thiserror = "2.0.18"
dotenvy = "0.15.7"
